# pyradiomics-web

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml
Classification/: Cross_roc.py  Extract_feature.py  Feature_process.py  Feature_select.py  Lasso.py  Model.py  Remake_mask.py  Resample.py  Roc_plot.py  TEST1.py  TEST2.py  TEST3.py  TEST4.py  Voting.py  __init__.py  auto1.py  auto2.py  check_version.py  common.py  compute_auc.py  compute_avg.py  compute_metric.py  examples.py  interfaces.py  load_model.py
classification/: __init__.py  autogluon_experiment.py  common.py  compute_auc.py  cross_roc.py  examples.py  feature_extraction.py  feature_processing_experiment.py  feature_selection_cli.py  image_resampling.py  interfaces.py  lasso_feature_selection.py  load_model.py  mask_rebuild.py  model_factory.py  roc_benchmark.py  roc_plot.py  voting_experiment.py
configs/: ct_radiomics.yaml
docs/: clinical-radiomics-platform-architecture.md
manifests/: cases_template.csv  labels_template.csv
manifests/examples/: Dataset006_NPC2_cases.csv
pyrad_workflow/: __init__.py  app.py  app_config.py  constants.py  extraction.py  io_utils.py  modeling.py  services.py  validation.py  webapp.py  workspace.py
pyrad_workflow/api/: __init__.py  routes.py
pyrad_workflow/application/: __init__.py  platform_service.py
pyrad_workflow/domain/: __init__.py  workflows.py
pyrad_workflow/infrastructure/: __init__.py  filesystem.py  jobs.py  settings.py
scripts/: check_install.py  generate_nnunet_manifest.py
tests/: test_classification_api.py
(+9 files in other folders)
